--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Advent+Pro&family=Lobster&family=Montserrat:wght@100&family=Titillium+Web:wght@300&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Titillium Web", sans-serif;
+  color: #333;
+  line-height: 1.4;
+  font-size: 16px;
+  background-color: #000;
+}
+
+html {
+  scroll-behavior: smooth;
 }
